# RayTracing

./: CMakeLists.txt  RayTracing.sln  RayTracing.vcxproj  RayTracing.vcxproj.filters  image.ppm  main.cpp  vec3.h
RayTraciing/x64/Debug/: RayTraciing.exe.recipe  RayTraciing.ilk  vc143.idb
RayTraciing/x64/Debug/RayTraciing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RayTraciing.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
